--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "ProSnap - Screenshot & Annotation Tool",
   "short_name": "ProSnap",
   "version": "1.2.0",
-  "description": "Capture, annotate, blur sensitive info, and share screenshots. Features: selection, pen, arrow, shapes, text, highlight & more!",
+  "description": "Capture, annotate, blur & share screenshots. Includes tools: selection, pen, shapes, blur, highlight & more.",
   "permissions": [
     "activeTab",
     "scripting",
