--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "prosnap",
+  "name": "primeshot",
   "version": "1.2.0",
-  "description": "ProSnap Screenshot & Annotation Tool",
+  "description": "PrimeShot Screenshot & Annotation Tool",
   "devDependencies": {
     "sharp": "^0.34.5"
   }
