--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "ProSnap - Screenshot & Annotation Tool",
-  "short_name": "ProSnap",
+  "name": "PrimeShot - Screenshot & Annotation Tool",
+  "short_name": "PrimeShot",
   "version": "1.2.0",
   "description": "Capture, annotate, blur, and share screenshots with other powerful built-in tools.",
   "permissions": [
